--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "cool-ascii-faces": "^1.3.4",
     "ejs": "^2.7.4",
     "express": "^4.17.1",
-    "heroku": "^7.35.1"
+    "heroku": "^7.35.1",
+    "pg": "^7.17.1"
   },
   "devDependencies": {
     "request": "^2.81.0",
